* Bodie-0.3.5-HIPPY-stable

This release brings  improvements to the peer-to-peer search, fixes
a few bugs, and adds functionalities to Seeks.

- Fixes a computational blowup when expanding queries in P2P search.

- Improved detection of dead peers and their monitoring.

- Added default support for Delicious as a feed.

- Added support for Wordpress search results as a feed.

- Added support for Redmine search results as a feed.

- Fixed a bad encoding of some result titles.

- Fix to the Bing result parser.
	
- Fix to the Yahoo result grabber.

- there's now a --enable-personalization option to the configure
  script. When set to 'no' it allows to disable all personalization
  features, turning Seeks into a generic meta-search engine.

- An embryo of a no-tracking plugin, that implements HTTP header
  monitoring for avoiding smart tracking of users (e.g. through the
  'Last-Modified' header, ...).

- Fixes to the JSON output.

- Many bug fixes.

* DiAngelo-0.3.4-HIPPY-stable

First release with peer-to-peer activated as default. Every Seeks node
defines a list of Seeks peers to work with. This list defines a
ring of trusted peers. In future versions, the list will be updated
automatically, before a DHT takes over.

- Pure Seeks results: results now include data coming from the Seeks
  network (other peers) and not exclusively from feeds and search
  engines in the pipe.

- Default UI now includes peer information and recommendations.
	
- Implements three P2P call types over HTTP: per-key db access using Tokyo
  Tyrant, query fragment key extraction from Seeks node directly, and
  'batch' P2P query calls that fetch the whole halo of similar queries
  from a distant Seeks node (default).

- Automatic detection and testing of dead peers. Dead peers are marked back as
  alive when they are confirmed to operate correctly.
	
- libevent-2.x support is now default, see