@@ -117,6 +117,9 @@ namespace seeks_plugins
             std::string sugg = (*mit).second;
             miscutil::replace_in_string(sugg,"\\","\\\\");
             miscutil::replace_in_string(sugg,"\"","\\\"");
+            miscutil::replace_in_string(sugg,"\t","");
+            miscutil::replace_in_string(sugg,"\r","");
+            miscutil::replace_in_string(sugg,"\n","");
             suggs.push_back("\"" + sugg + "\"");
             if (k > websearch::_wconfig->_num_reco_queries)
               break;
@@ -171,8 +174,8 @@ namespace seeks_plugins
           {
             std::string escaped_query = qc->_query;
             miscutil::replace_in_string(escaped_query,"\"","\\\"");
-            miscutil::replace_in_string(escaped_query,"\\t","");
-            miscutil::replace_in_string(escaped_query,"\\r","");
+            miscutil::replace_in_string(escaped_query,"\t","");
+            miscutil::replace_in_string(escaped_query,"\r","");
             miscutil::replace_in_string(escaped_query,"\n","");
             suggs.push_back("\"" + escaped_query + "\"");
           }
